--- a/MrSkeleton/MrSkeleton/MrSkeleton.vcxproj.filters
+++ b/MrSkeleton/MrSkeleton/MrSkeleton.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MrSkeleton.c">
+    <ClCompile Include="main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Physics.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
