--- a/Skeleton_Party/Processing_Sample.vcxproj
+++ b/Skeleton_Party/Processing_Sample.vcxproj
@@ -198,6 +198,7 @@ xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClCompile Include="jazz.c" />
     <ClCompile Include="keith.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="qh.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
