--- a/Skeleton_Party/Processing_Sample.vcxproj
+++ b/Skeleton_Party/Processing_Sample.vcxproj
@@ -200,6 +200,7 @@ xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClCompile Include="keith.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="qh.c" />
+    <ClCompile Include="yithon.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
