--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ dkms.conf
 *.db-wal
 *.ipch
 MrSkeleton/.vs/MrSkeleton/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
