--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ MrSkeleton/.vs/MrSkeleton/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
