--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
+*.tlog
