--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 *.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/Processing_Sample.lastbuildstate
+Skeleton_Party/x64/Debug/Processing_Sample.log
+Skeleton_Party/x64/Debug/Processing_Sample.exe.recipe
