Enemy_array update with error
This version has error, pushed up for isaac to debug

--- a/Skeleton_Party/Processing_Sample.vcxproj
+++ b/Skeleton_Party/Processing_Sample.vcxproj
@@ -194,6 +194,7 @@ xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy_array.c" />
     <ClCompile Include="game.c" />
     <ClCompile Include="isaac.c" />
     <ClCompile Include="jazz.c" />
