--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ Skeleton_Party/x64/Debug/Processing_Sample.exe.recipe
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 *.tlog
 *.log
+*.tlog
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
