--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Skeleton_Party/.vs/Processing_Sample/v16/.suo
 *.log
 *.tlog
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
+*.tlog
