--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 *.tlog
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
+*.tlog
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
