bg pic + level design pt1

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 *.tlog
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
