--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,12 @@ Skeleton_Party/.vs/Processing_Sample/v16/.suo
 *.tlog
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
 Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/CL.command.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/CL.read.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/link.read.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/link.write.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/Processing_Sample.lastbuildstate
+Skeleton_Party/x64/Debug/Processing_Sample.exe.recipe
+Skeleton_Party/x64/Debug/Processing_Sample.log
+Skeleton_Party_production_plan.xlsx
