added audio implementation
lower some of the existing audio cause of fb

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,11 @@ Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/Processing_Sample.lastbuildstate
 Skeleton_Party/x64/Debug/Processing_Sample.exe.recipe
 Skeleton_Party/x64/Debug/Processing_Sample.log
 Skeleton_Party_production_plan.xlsx
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/CL.command.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/CL.read.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/link.read.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/link.write.1.tlog
+Skeleton_Party/x64/Debug/Processi.14B654ED.tlog/Processing_Sample.lastbuildstate
+Skeleton_Party/x64/Debug/Processing_Sample.exe.recipe
+Skeleton_Party/x64/Debug/Processing_Sample.log
+Skeleton_Party/.vs/Processing_Sample/v16/.suo
